# geo-locate-ml

./: .gitignore  .gitignore.bak  Makefile  README.md  dataset.py  pyproject.toml  requirements.txt
docs/: architecture.md  commands.md  roadmap.md  target_v1.md
models/: best.json  best.pt
src/: __init__.py  analysis.py  build_proxies.py  config.py  data.py  dataset.py  eval.py  geo.py  labels.py  metrics_geo.py  modeling.py  paths.py  plots.py  predict.py  reporting.py  rerank.py  rerank_eval.py  run.py  splits.py  topk_dump.py  train.py  train_loop.py
src/_legacy/: README.md  __init__.py
src/scripts/: demo.py
tools/: analyze_tail.py  inspect_top_errors.py  train.py
tools/analysis/: top_classes.py
tools/dataset/: build_index.py  make_splits.py  merge_splits.py  remake_splits_kept.py  sanity_check.py
tools/dev/: bundle_scripts.sh
tools/ingest/: README_processed.md  README_scan_raw.md  cities_batch_download.sh  dem_download_fr.py  generate_city_batches.py  mapillary_download.py  purge.py  scan_processed.py  scan_raw.py  worldcover_download_fr.py
tools/ops/: check_duplicates.py  compress_raw_to_processed.py  deduplicate_ids.py  purge_images_keep_index.sh
tools/pipeline/: build_h3_features.py  fill_communes_to_100.py  scan_communes_coverage_mt.py
tools/reporting/: aggregate_runs.py  normalize_run.py
tools/rerank/: rerank.py  rerank_eval.py  rerank_features.py
tools/visualize/: README.md  check_split_coverage.py  dump_val_topk.py  export_splits_from_parquet.py  map_images.py  map_val_diagnostics.py  map_val_far_errors.py  mapview.py
(+6 files in other folders)
